# SilentMemoir

./: .gitignore  CLAUDE.md  CSS.tcss  README.md  \  main.py  pyproject.toml  stopwatch.tcss
.github/workflows/: ci.yml  release.yml
assests/: css.tcss
data/: quotes.py
screens/: entry.py  entry_editor.py  journal_entries.py  opening_screen.py  view_journals.py
src/silentmemoir/: config.py  main.py  models.py
src/silentmemoir.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/silentmemoir/assets/: css.tcss
src/silentmemoir/screens/: \  entry.py  finder.py  opening_screen.py  view_journals.py
